--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "calcit_command"
 version = "0.0.1"
-authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
+authors = ["tiye <jiyinyiyong@gmail.com>"]
 edition = "2021"
 
 [lib]
